--- a/backend/.env_template
+++ b/backend/.env_template
@@ -7,6 +7,10 @@ CORS_ORIGINS="*"
 CORS_METHODS="*"
 CORS_HEADERS="*"
 
+# LLM
+LLM_HOST=<your-llm-service-host>
+LLM_PORT=<your-llm-service-port>
+
 # DataBase
 DB_HOST=<your-db-host>
 DB_PORT=<your-db-port>
