llm support inculed

--- a/backend/.env_template
+++ b/backend/.env_template
@@ -10,6 +10,7 @@ CORS_HEADERS="*"
 # LLM
 LLM_HOST=<your-llm-service-host>
 LLM_PORT=<your-llm-service-port>
+LLM_ENDPOINT="/api/generate"
 
 # DataBase
 DB_HOST=<your-db-host>
