--- a/backend/config/config.yaml
+++ b/backend/config/config.yaml
@@ -33,10 +33,11 @@ model:
   # psm_mode: 6
 
 llm_config:
-  use_llm: true # true # false
-  prompts_path: app\core\llm_formater_promts
   llm_request_params:
-    temperature: 0.7 # Default: 0.7
+    stream: false
+    model: deepseek-r1:8b
+    format: json
+  cert_path: false
 
 logger:
   file_name_template: documents_to_text_service.log
